--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -1,5 +1,6 @@
 .signup-btn{
-    background-image: linear-gradient(to right, #09281b, #174a2a, #326e33, #599336, #8ab733);    display:inline-block;
+    background-image: linear-gradient(to right, #09281b, #174a2a, #326e33, #599336, #8ab733);    
+    display:inline-block;
     color:#fff;
     font-family: "roboto-regular";
     letter-spacing: 2px;
@@ -8,7 +9,6 @@
     cursor: pointer;
     width:100%;
     outline: 0;
-    display:inline-block !important;
 }
 @media screen and (max-width: 768px){
     .signup-btn{   
