--- a/assets/css/avenue.css
+++ b/assets/css/avenue.css
@@ -1,32 +1,47 @@
 /* heading */
 .avenue-header {
-    padding: 20px 30px;
-  }
-  .avenue-header .logo-section {
-    width: 182px;
-    height: 22px;
-  }
-  .avenue-header .logo-section a {
-    color: #000;
-    letter-spacing: 0.2px;
-    line-height: 22px;
-    font-family: "roboto-regular";
-    font-size: 18px;
-  }
-  .avenue-header .logo-section span {
-    color: #707070;
-  }
-  .avenue-header .link-section a {
-    color: #707070;
-    line-height: 18px;
-    font-family: "roboto-regular";
-    font-size: 16px;
-    float: right;
-  }
+  padding: 0px 30px;
+}
+.avenue-header .link-section {
+  padding: 20px 0px;
+}
+.avenue-header .logo-section {
+  width: 182px;
+}
+.avenue-header .logo-section img {
+  width: 100%;
+  object-fit: cover;
+}
+.avenue-header .logo-section a {
+  color: #000;
+  letter-spacing: 0.2px;
+  line-height: 22px;
+  font-family: "roboto-regular";
+  font-size: 18px;
+}
+.avenue-header .logo-section span {
+  color: #707070;
+}
+.avenue-header .link-section a {
+  color: #707070;
+  letter-spacing: 0.1px;
+  line-height: 18px;
+  font-family: "roboto-regular";
+  font-size: 16px;
+  float: right;
+}
+.line{
+  display: inline-block;
+  width: 100%;
+  background-color: #959595;
+  height: 1px;
+  position: relative;
+  top: 150px;
+}
 /* content */
 .avenue-content-image {
   background-image: url(../images/bg.png);
-  height: 100vh;
+  height: 116vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #fff;
@@ -34,6 +49,7 @@
   margin-top: 100px;
   padding: 0px 200px;
   position: relative;
+ 
   }
   .avenue-content img{
       width:100%;
@@ -396,7 +412,7 @@
 }
 @media screen and (max-width: 1200px){
   .avenue-content-section{
-    padding:0px;
+    padding:0px 20px;
   }
   .avenue-offer-card{
     width:90%;
@@ -535,6 +551,13 @@
 .avenue-offer-img-content{
   left:20px;
 }
+.avenue-content-section {
+  padding: 0px;
+  padding-right: 20px;
+}
+.avenue-header .logo-section {
+  width: 140px;
+}
 }
 @media screen and (max-width: 420px) {
   .signup-modal .modal-dialog {
@@ -550,4 +573,9 @@
   .signup-modal .modal-dialog {
     padding: 15px;
   }
+  .avenue-header{
+    padding-left: 5px;
+  }
+
+
 }
